[project]
name = "tinyflu-cache"
version = "0.1.0"
description = "A Python/Flask replication of the TinyLFU caching paper — built a smarter cache from scratch (Bloom filter + Count-Min Sketch) and proved it beats plain LRU by up to 17-57% hit ratio on skewed traffic, matching the paper's findings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "numpy>=2.5.1",
    "pathlib>=1.0.1"
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
